<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_games">

    <fragment
        android:id="@+id/navigation_games"
        android:name="id.dwichan.liongames.ui.main.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="id.dwichan.liongamesdfm.favorite.FavoritesFragment"
        android:label="@string/title_favorites"
        app:moduleName="favorite"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="id.dwichan.liongames.ui.main.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

</navigation>